Update Text + image.ipynb

--- a/code/Text + image.ipynb
+++ b/code/Text + image.ipynb
@@ -213,13 +213,8 @@
    "outputs": [],
    "source": [
     "#model_img = CNN()\n",
-    "#model_img = model.cuda()\n",
-    "#model_img.load_state_dict(torch.load('CNN_modelFTnew.pth'))\n",
-    "\n",
-    "#pretrained_model = torch.load('CNN_modelFTnew.pth')\n",
-    "#model = models.resnet50(pretrained=False)\n",
-    "#model.load_state_dict(pretrained_model.state_dict(),strict=False)\n",
-    "#pretrained_model.load_state_dict(torch.load('CNN_modelFTnew.pth'),strict=False)\n"
+    "#model_img = model_img.cuda()\n",
+    "#model_img.load_state_dict(torch.load('CNN_model.pth'))\n",
    ]
   }
  ],
