Update Text + image.ipynb

--- a/code/Text + image.ipynb
+++ b/code/Text + image.ipynb
@@ -214,7 +214,7 @@
    "source": [
     "#model_img = CNN()\n",
     "#model_img = model_img.cuda()\n",
-    "#model_img.load_state_dict(torch.load('CNN_model.pth'))\n",
+    "#model_img.load_state_dict(torch.load('CNN_model.pth'))\n"
    ]
   }
  ],
