--- a/code/Text + image.ipynb
+++ b/code/Text + image.ipynb
@@ -139,9 +139,9 @@
     }
    ],
    "source": [
-    "model_text = BertModel.from_pretrained('bert-base-cased', num_labels=30, output_attentions = False, \n",
-    "   output_hidden_states = False)\n",
-    "model_text.load_state_dict(torch.load('best_model.pth'),strict=False)\n"
+    "model_text_state_dict = torch.load('best_model.pth')\n",
+    "model_text = BertModel.from_pretrained('bert-base-cased', num_labels=30, state_dict = model_text_state_dict, output_attentions = False, \n",
+    "   output_hidden_states = False)\n"
    ]
   },
   {
@@ -184,36 +184,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24a0f529",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class CNN(torch.nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(CNN, self).__init__()\n",
-    "\n",
-    "        self.pretrained = torchvision.models.resnet50(pretrained=False)\n",
-    "        self.pretrained.fc = torch.nn.Identity()\n",
-    "        \n",
-    "        self.linear = torch.nn.Linear(2048, 30)\n",
-    "       \n",
-    "\n",
-    "\n",
-    "    def forward(self, x):        \n",
-    "        x = self.pretrained(x)\n",
-    "        x = self.linear(x)\n",
-    "        return x\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "94a40cda",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#model_img = CNN()\n",
+    "#model_img = models.resnet50(pretrained=True)\n",
+    "#num_ftrs = model_img.fc.in_features\n",
     "#model_img = model_img.cuda()\n",
+    "model_img.fc = nn.Sequential(nn.Linear(2048, 512),        \n",
+    "       nn.ReLU(),\n",
+    "       nn.Dropout(0.2),\n", 
+    "       nn.Linear(512, 30),\n",
+    "       nn.LogSoftmax(dim=1))\n",
     "#model_img.load_state_dict(torch.load('CNN_model.pth'))\n"
    ]
   }
