--- a/code/Text model.ipynb
+++ b/code/Text model.ipynb
@@ -23,7 +23,9 @@
     "from transformers import BertForSequenceClassification\n",
     "from ipywidgets import FloatProgress\n",
     "import torch\n",
-    "from transformers import BertModel"
+    "from transformers import BertModel\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import seaborn as sn"
    ]
   },
   {
@@ -337,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "22c8b404",
+   "id": "5ac01d6a",
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f66fa8f5",
+   "id": "c6a83071",
    "metadata": {},
    "source": [
     "## Training"
@@ -599,7 +601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85d315ba",
+   "id": "022a86fe",
    "metadata": {},
    "source": [
     "### Evaluation"
@@ -608,15 +610,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15327bec",
+   "id": "8cbe4295",
    "metadata": {},
    "outputs": [],
    "source": [
     "def evaluate(model, test_data):\n",
+    "    \n",
+    "    y_pred = []\n",
+    "    y_true = []\n",
     "\n",
     "    test = Dataset(test_data)\n",
+    "    model = model.eval()\n",
     "\n",
-    "    test_dataloader = torch.utils.data.DataLoader(test, batch_size=10)\n",
+    "    test_loader = torch.utils.data.DataLoader(test, batch_size=100,shuffle=False)\n",
     "\n",
     "    use_cuda = torch.cuda.is_available()\n",
     "    device = torch.device(\"cuda\" if use_cuda else \"cpu\")\n",
@@ -628,25 +634,29 @@
     "    total_acc_test = 0\n",
     "    with torch.no_grad():\n",
     "\n",
-    "        for test_input, test_label in test_dataloader:\n",
+    "        for test_input, test_label in test_loader:\n",
     "\n",
     "            test_label = test_label.to(device)\n",
     "            mask = test_input['attention_mask'].to(device)\n",
     "            input_id = test_input['input_ids'].squeeze(1).to(device)\n",
     "\n",
     "            output = model(input_id, mask)\n",
+    "            \n",
+    "            y_pred.extend(output.argmax(dim=1).data.cpu().numpy())\n",
+    "            y_true.extend(test_label.data.cpu().numpy())\n",
     "\n",
     "            acc = (output.argmax(dim=1) == test_label).sum().item()\n",
     "            total_acc_test += acc\n",
     "    \n",
     "    print(f'Test Accuracy: {total_acc_test / len(test_data): .3f}')\n",
+    "\n",
     "    \n",
-    "        # constant for classes\n",
+    "    # constant for classes\n",
     "    classes = ('Arts & Photography', 'Biographies & Memoirs', 'Business & Money', 'Calendars', \"Children's Books\", 'Christian Books & Bibles', 'Comics & Graphic Novels', 'Computers & Technology', 'Cookbooks, Food & Wine', 'Crafts, Hobbies & Home', 'Engineering & Transportation', 'Health, Fitness & Dieting', 'History', 'Humor & Entertainment', 'Law', 'Literature & Fiction', 'Medical Books', 'Mystery, Thriller & Suspense', 'Parenting & Relationships', 'Politics & Social Sciences', 'Reference', 'Religion & Spirituality', 'Romance', 'Science & Math', 'Science Fiction & Fantasy', 'Self-Help', 'Sports & Outdoors', 'Teen & Young Adult', 'Test Preparation', 'Travel')\n",
     "\n",
     "    # Build confusion matrix\n",
     "    cf_matrix = confusion_matrix(y_true, y_pred)\n",
-    "    df_cm = pd.DataFrame(cf_matrix/np.sum(cf_matrix) *10, index = [i for i in classes],\n",
+    "    df_cm = pd.DataFrame(cf_matrix/np.sum(cf_matrix) *30, index = [i for i in classes],\n",
     "                         columns = [i for i in classes])\n",
     "    plt.figure(figsize = (30,25))\n",
     "    sn.heatmap(df_cm, annot=True)\n",
@@ -657,26 +667,19 @@
     "#learn_rate = [1e-7, 1e-6, 0.001, 0.01, 0.1, 0.2, 0.3]      \n",
     "#for LR in learn_rate:\n",
     "#    train(model, train_s, val_s, LR, EPOCHS)\n",
-    "#    evaluate(model, test_set)"
+    "#    evaluate(model, test_set)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75b4c182",
+   "id": "e3825721",
    "metadata": {},
    "outputs": [],
    "source": [
     "torch.save(model.state_dict(), 'best_model.pth') "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a14f8aab",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
